mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/vita_especialidad__c.object-meta.xml
<CustomObject>
    <label>Especialidad</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Especialidad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Especialidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>