mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/activo__c.field-meta.xml
<CustomField>
    <fullName>activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Control de disponibilidad en el sistema</description>
    <inlineHelpText>Marca si esta especialidad está habilitada para turnos, consultas y visibilidad en el portal.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>