mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/area_medica__c.field-meta.xml
<CustomField>
    <fullName>area_medica__c</fullName>
    <description>Clasificación médica general que agrupa cada especialidad dentro de una categoría más amplia.</description>
    <label>Área Principal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medicina_clinica_adulta</fullName>
                <color>#3366FF</color>
                <label>Medicina Clínica Adulta</label>
            </value>
            <value>
                <fullName>cirugia</fullName>
                <color>#FF0000</color>
                <label>Cirugía Adulta</label>
            </value>
            <value>
                <fullName>salud_mental_neurologia</fullName>
                <color>#A845DC</color>
                <label>Salud Mental y Neurología</label>
            </value>
            <value>
                <fullName>maternidad_pediatria</fullName>
                <color>#F3D904</color>
                <label>Maternidad y Pediatría</label>
            </value>
            <value>
                <fullName>diagnostico_imagenes</fullName>
                <color>#78C953</color>
                <label>Diagnóstico e Imagenes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>