mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/cod_especialidad__c.field-meta.xml
<CustomField>
    <fullName>cod_especialidad__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Código único para lógica o integración</inlineHelpText>
    <label>Código Interno</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>