mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/espec_ver_ci__c.field-meta.xml
<CustomField>
    <fullName>espec_ver_ci__c</fullName>
    <formula>cod_especialidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Interno</label>
    <type>Text</type>
</CustomField>