mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/Nombre_de_Especialidad_Copia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Especialidad_Copia__c</fullName>
    <externalId>true</externalId>
    <label>Nombre de Especialidad</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>