mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/fields/nombre_especialidad__c.field-meta.xml
<CustomField>
    <fullName>nombre_especialidad__c</fullName>
    <label>Nombre de Especialidad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>area_medica__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medicina_general</fullName>
                <color>#0B6FCE</color>
                <label>Medicina General</label>
            </value>
            <value>
                <fullName>geriatria</fullName>
                <color>#0B6FCE</color>
                <label>Geriatría</label>
            </value>
            <value>
                <fullName>ginecologia</fullName>
                <color>#0B6FCE</color>
                <label>Ginecología</label>
            </value>
            <value>
                <fullName>nutricion</fullName>
                <color>#0B6FCE</color>
                <label>Nutrición</label>
            </value>
            <value>
                <fullName>cardiologia_general</fullName>
                <color>#0B6FCE</color>
                <label>Cardiología General</label>
            </value>
            <value>
                <fullName>gastroenterologia</fullName>
                <color>#0B6FCE</color>
                <label>Gastroenterología</label>
            </value>
            <value>
                <fullName>dermatologia_general</fullName>
                <color>#0B6FCE</color>
                <label>Dermatología General</label>
            </value>
            <value>
                <fullName>infectologia</fullName>
                <color>#0B6FCE</color>
                <label>Infectología</label>
            </value>
            <value>
                <fullName>reumatologia</fullName>
                <color>#0B6FCE</color>
                <label>Reumatología</label>
            </value>
            <value>
                <fullName>alergologia</fullName>
                <color>#0B6FCE</color>
                <label>Alergología</label>
            </value>
            <value>
                <fullName>urologia_clinica</fullName>
                <color>#0B6FCE</color>
                <label>Urología Clínica (No quirúrgica)</label>
            </value>
            <value>
                <fullName>cirugia_general</fullName>
                <color>#FF0000</color>
                <label>Cirugía General</label>
            </value>
            <value>
                <fullName>traumatologia</fullName>
                <color>#FF0000</color>
                <label>Traumatología</label>
            </value>
            <value>
                <fullName>urologia_quirurgica</fullName>
                <color>#FF0000</color>
                <label>Urología Quirúrgica</label>
            </value>
            <value>
                <fullName>oftalmologia_quirurgica</fullName>
                <color>#FF0000</color>
                <label>Oftalmología (Quirúrgica)</label>
            </value>
            <value>
                <fullName>neurocirugia</fullName>
                <color>#FF0000</color>
                <label>Neurocirugía</label>
            </value>
            <value>
                <fullName>otorrinolaringologia_quirurgica</fullName>
                <color>#FF0000</color>
                <label>Otorrinolaringología (Quirúrgica)</label>
            </value>
            <value>
                <fullName>maxilofacial_cirugia</fullName>
                <color>#FF0000</color>
                <label>Maxilofacial (Cirugía)</label>
            </value>
            <value>
                <fullName>cardiovascular_cirugia</fullName>
                <color>#FF0000</color>
                <label>Cardiovascular (Cirugía)</label>
            </value>
            <value>
                <fullName>vascular_cirugia</fullName>
                <color>#FF0000</color>
                <label>Vascular (Cirugía)</label>
            </value>
            <value>
                <fullName>neurologia</fullName>
                <color>#A845DC</color>
                <label>Neurología</label>
            </value>
            <value>
                <fullName>psiquiatria_general</fullName>
                <color>#A845DC</color>
                <label>Psiquiatría General</label>
            </value>
            <value>
                <fullName>psicologia_clinica</fullName>
                <color>#A845DC</color>
                <label>Psicología Clínica</label>
            </value>
            <value>
                <fullName>obstetricia_y_control_prenatal</fullName>
                <color>#F3D904</color>
                <label>Obstetricia y Control Prenatal</label>
            </value>
            <value>
                <fullName>medicina_materno_fetal</fullName>
                <color>#F3D904</color>
                <label>Medicina Materno Fetal</label>
            </value>
            <value>
                <fullName>pediatria_general</fullName>
                <color>#F3D904</color>
                <label>Pediatría General</label>
            </value>
            <value>
                <fullName>neonatologia</fullName>
                <color>#F3D904</color>
                <label>Neonatología</label>
            </value>
            <value>
                <fullName>infectologia_pediatrica</fullName>
                <color>#F3D904</color>
                <label>Infectología Pediátrica</label>
            </value>
            <value>
                <fullName>cardiologia_infantil</fullName>
                <color>#F3D904</color>
                <label>Cardiología Infantil</label>
            </value>
            <value>
                <fullName>psiquiatria_infanto_juvenil</fullName>
                <color>#F3D904</color>
                <label>Psiquiatría Infanto Juvenil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>