mi-primer-proyecto/force-app/main/default/objects/vita_especialidad__c/listViews/Lista_de_Especialidades.listView-meta.xml
<ListView>
    <fullName>Lista_de_Especialidades</fullName>
    <columns>NAME</columns>
    <columns>cod_especialidad__c</columns>
    <columns>area_medica__c</columns>
    <columns>nombre_especialidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lista de Especialidades</label>
</ListView>